# Neural_collapse

./: .gitignore  README.md  imagenet.py  pyproject.toml
experiments/: check_params.py  numpy_realization.py  resnet_mnist.py  test_inv.py
logs/: inv.txt
src/neural_collapse/: __init__.py  dataloader.py  generate_rand.py  main.py  metric.py  models.py  plots.py  trainer.py  utils.py
