[project]
name = "neural-collapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Komarov Anton", email = "a.komarov@ispras.ru" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
neural-collapse = "neural_collapse:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"
